[gd_scene load_steps=8 format=3 uid="uid://c8oqxmm2w2wvv"]

[ext_resource type="Script" path="res://src/MainScene.gd" id="1_gkyp8"]
[ext_resource type="Texture2D" uid="uid://8ka2ui7sq36p" path="res://addons/kenney_particle_pack/circle_05.png" id="2_vgrj8"]
[ext_resource type="Script" path="res://src/overlays.gd" id="2_xbape"]
[ext_resource type="Script" path="res://src/level.gd" id="4_5rwyw"]
[ext_resource type="Script" path="res://src/players.gd" id="5_303qp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujyws"]
bg_color = Color(1, 0.117647, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmecq"]
bg_color = Color(0.00392157, 1, 0, 1)

[node name="MainScene" type="Node"]
script = ExtResource("1_gkyp8")

[node name="Overlays" type="CanvasLayer" parent="."]
script = ExtResource("2_xbape")

[node name="MainMenu" type="PanelContainer" parent="Overlays"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 419.5
offset_top = 227.0
offset_right = -419.5
offset_bottom = -227.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Overlays/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Overlays/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Overlays/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="Overlays/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="Overlays/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="HBoxContainer" type="HBoxContainer" parent="Overlays/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 4.01
alignment = 1

[node name="AddressEntry" type="LineEdit" parent="Overlays/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to Join Here"
alignment = 1
expand_to_text_length = true

[node name="PortEntry" type="LineEdit" parent="Overlays/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "Port"
alignment = 1
expand_to_text_length = true

[node name="HUD" type="Control" parent="Overlays"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Overlays/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.485
anchor_top = 0.485
anchor_right = 0.515
anchor_bottom = 0.515
offset_left = -558.72
offset_top = -314.28
offset_right = 558.72
offset_bottom = 314.28
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(576, 324)
texture = ExtResource("2_vgrj8")
stretch_mode = 5

[node name="HealthBar" type="ProgressBar" parent="Overlays/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0138889
anchor_top = 0.938272
anchor_right = 0.263889
anchor_bottom = 0.966049
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ujyws")
theme_override_styles/fill = SubResource("StyleBoxFlat_cmecq")
max_value = 3.0
value = 3.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Clienttypelabel" type="Label" parent="Overlays/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.025
anchor_right = 0.181
anchor_bottom = 0.123
offset_left = -0.128
offset_top = -0.200001
offset_right = -0.512009
offset_bottom = 0.295998
theme_override_font_sizes/font_size = 20

[node name="fullScreenOverlay" type="PanelContainer" parent="Overlays"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="pausemenu" type="PanelContainer" parent="Overlays"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 419.5
offset_top = 227.0
offset_right = -419.5
offset_bottom = -227.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="Overlays/pausemenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Overlays/pausemenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Overlays/pausemenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="Overlays/pausemenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="LeaveButton" type="Button" parent="Overlays/pausemenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Leave Game"

[node name="HBoxContainer" type="HBoxContainer" parent="Overlays/pausemenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 4.01
alignment = 1

[node name="AddressInfo" type="LineEdit" parent="Overlays/pausemenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "ip: ----"
editable = false
expand_to_text_length = true

[node name="PortInfo" type="LineEdit" parent="Overlays/pausemenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "port: ----"
editable = false
expand_to_text_length = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://src/player/player.tscn", "res://src/objects/physicscube.tscn")
spawn_path = NodePath("..")

[node name="Level" type="Node3D" parent="."]
script = ExtResource("4_5rwyw")

[node name="Players" type="Node3D" parent="."]
script = ExtResource("5_303qp")

[connection signal="upnp_ready" from="." to="." method="_on_upnp_ready"]
[connection signal="leave_game" from="Overlays" to="." method="_on_leave_game"]
[connection signal="unload_environment" from="Overlays" to="Level" method="_unload_environment"]
[connection signal="pressed" from="Overlays/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Overlays/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Overlays/pausemenu/MarginContainer/VBoxContainer/ContinueButton" to="Overlays" method="_on_continue_button_pressed"]
[connection signal="pressed" from="Overlays/pausemenu/MarginContainer/VBoxContainer/LeaveButton" to="Overlays" method="_on_leave_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
